tests/ui/g-route-policy-mismatch.stderr
error[E0080]: evaluation panicked: route scope recorded conflicting controller policy annotations
   --> tests/ui/g-route-policy-mismatch.rs:111:5
    |
111 | > = project(&ROUTE);
    |     ^^^^^^^^^^^^^^^ evaluation of `CONTROLLER` failed inside this call
    |
note: inside `project::<0, StepCons<SendStep<Role<0>, Role<0>, hibana::global::Message<hibana::global::LabelMarker<5>, GenericCapToken<ArmWithPolicyKind>, CanonicalControl<ArmWithPolicyKind>>>, StepCons<SendStep<Role<0>, Role<0>, hibana::global::Message<hibana::global::LabelMarker<6>, GenericCapToken<ArmWithoutPolicyKind>, CanonicalControl<ArmWithoutPolicyKind>>>, StepNil>>, MintConfig>`
   --> src/global/role_program.rs
    |
    |     let _ = super::typestate::RoleTypestate::<ROLE>::from_program(eff);
    |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: inside `hibana::global::typestate::RoleTypestate::<0>::from_program`
   --> src/global/typestate.rs
    |
    |         Self::build(program, program.as_slice())
    |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: inside `hibana::global::typestate::RoleTypestate::<0>::build`
   --> $RUST/core/src/panic.rs
    |
    |           $crate::panicking::panic_fmt($crate::const_format_args!($($t)+));
    |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the failure occurred here
    |
   ::: src/global/typestate.rs
    |
    | / ...                   panic!(
    | | ...                       "route scope recorded conflicting controller policy annotations"
    | | ...                   );
    | |_______________________- in this macro invocation
